@@ -1,10 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0) # CMAKE_CXX_STANDARD
 PROJECT(common VERSION 1.24.0.0 LANGUAGES CXX C)
-SET(CMAKE_CXX_STANDARD 11)
-SET(CMAKE_CXX_STANDARD_REQUIRED ON)
-SET(CMAKE_CXX_EXTENSIONS OFF)
-SET(CMAKE_C_STANDARD 99)
-SET(CMAKE_C_STANDARD_REQUIRED ON)
+#SET(CMAKE_CXX_STANDARD 11)
+#SET(CMAKE_CXX_STANDARD_REQUIRED ON)
+#SET(CMAKE_CXX_EXTENSIONS OFF)
+#SET(CMAKE_C_STANDARD 99)
+#SET(CMAKE_C_STANDARD_REQUIRED ON)
 #SET(CMAKE_C_EXTENSIONS OFF) commented for libev
 
 SET(PROJECT_NAME_TITLE ${PROJECT_NAME} CACHE STRING "Title for ${PROJECT_NAME}")
