@@ -58,13 +58,7 @@
 #define be64toh(x) betoh64(x)
 #define le64toh(x) letoh64(x)*/
 #elif defined(OS_ANDROID)
-#include <sys/endian.h>
-#define be16toh(x) betoh16(x)
-#define le16toh(x) letoh16(x)
-#define be32toh(x) betoh32(x)
-#define le32toh(x) letoh32(x)
-#define be64toh(x) betoh64(x)
-#define le64toh(x) letoh64(x)
+#include <endian.h>
 #elif defined(OS_POSIX)
 #include <endian.h>
 #elif defined(OS_WIN)
