@@ -372,6 +372,7 @@ ELSEIF(OS_POSIX)
   ELSEIF(OS_ANDROID)
     SET(COMMON_PLATFORM_HEADERS ${COMMON_PLATFORM_HEADERS})
     SET(COMMON_PLATFORM_SOURCES ${COMMON_PLATFORM_SOURCES}
+      ${CMAKE_SOURCE_DIR}/src/license/utils_android.cpp
       ${CMAKE_SOURCE_DIR}/src/system_info/system_info_android.cpp
     )
     SET(COMMON_PLATFORM_LIBRARIES ${COMMON_PLATFORM_LIBRARIES})
