@@ -1,6 +1,7 @@
 1.24.0 /
 [Alexandr Topilski]
 - IOS build
+- Android build
 
 1.23.7 / April 28, 2019
 [Alexandr Topilski]
